# docs/swagger.yaml
@@ -1,39 +1,23 @@
 basePath: /v1
 definitions:
-  category.CreateItemService:
+  category.CreateService:
     properties:
-      collectionId:
-        type: string
-      cover:
-        type: string
-      description:
-        type: string
-      link:
-        type: string
       name:
         type: string
     type: object
-  category.UpdateItemService:
+  category.UpdateService:
     properties:
-      collectionId:
-        type: string
-      cover:
-        type: string
-      description:
-        type: string
-      link:
-        type: string
       name:
         type: string
     type: object
   collection.CreateService:
     properties:
-      title:
+      name:
         type: string
     type: object
   collection.UpdateService:
     properties:
-      title:
+      name:
         type: string
     type: object
   global.Response:
@@ -130,7 +114,7 @@ paths:
             $ref: '#/definitions/global.Response'
       summary: 分页列表
       tags:
-      - CollectionItem
+      - CollectionCategory
     post:
       description: 创建信息
       parameters:
@@ -139,7 +123,7 @@ paths:
         name: collection
         required: true
         schema:
-          $ref: '#/definitions/category.CreateItemService'
+          $ref: '#/definitions/category.CreateService'
       produces:
       - application/json
       responses:
@@ -153,7 +137,7 @@ paths:
             $ref: '#/definitions/global.Response'
       summary: 创建信息
       tags:
-      - CollectionItem
+      - CollectionCategory
   /api/collection-category/{id}:
     delete:
       consumes:
@@ -176,7 +160,7 @@ paths:
             $ref: '#/definitions/global.Response'
       summary: 通过id删除信息
       tags:
-      - CollectionItem
+      - CollectionCategory
     get:
       consumes:
       - application/x-json-stream
@@ -198,7 +182,7 @@ paths:
             $ref: '#/definitions/global.Response'
       summary: 通过Id获取信息
       tags:
-      - CollectionItem
+      - CollectionCategory
     put:
       consumes:
       - application/json
@@ -214,7 +198,7 @@ paths:
         name: collection
         required: true
         schema:
-          $ref: '#/definitions/category.UpdateItemService'
+          $ref: '#/definitions/category.UpdateService'
       responses:
         "200":
           description: 成功
@@ -226,7 +210,7 @@ paths:
             $ref: '#/definitions/global.Response'
       summary: 通过id修改信息
       tags:
-      - CollectionItem
+      - CollectionCategory
   /api/collection/{id}:
     delete:
       consumes:
